external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_unpack_assign_rhs_not_fields.exp
warning[W09001]: unused alias
  ┌─ tests/move_check/parser/invalid_unpack_assign_rhs_not_fields.move:6:14
  │
6 │     use 0x2::X;
  │              ^ Unused 'use' of alias 'X'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/invalid_unpack_assign_rhs_not_fields.move:11:14
   │
11 │         X::S 0 = 0;
   │              ^
   │              │
   │              Unexpected '0'
   │              Expected ';'

